--- a/package.json
+++ b/package.json
@@ -11,29 +11,35 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.0",
     "nanoid": "^5.0.7",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
-    "yup": "^1.4.0",
-    "react-loader-spinner": "^6.1.6"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "daisyui": "^4.12.13",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.1"
   }
 }
